--- a/src/Plc.Implementation.Test/Plc.Implementation.Test.csproj
+++ b/src/Plc.Implementation.Test/Plc.Implementation.Test.csproj
@@ -3,6 +3,8 @@
 	<PropertyGroup>
 		<TargetFrameworks>net6.0;net48</TargetFrameworks>
 		<LangVersion>latest</LangVersion>
+		<Nullable>disable</Nullable>
+		<ImplicitUsings>disable</ImplicitUsings>
 		<IsPackable>false</IsPackable>
 		<AssemblyName>Phoenix.Data.Plc.Implementation.Test</AssemblyName>
 		<RootNamespace>Phoenix.Data.Plc.Implementation.Test</RootNamespace>
@@ -11,6 +13,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="AutoFixture.AutoMoq" Version="4.17.0" />
 		<PackageReference Include="Moq" Version="4.18.4" />
 		<PackageReference Include="nunit" Version="3.13.3" />
 		<PackageReference Include="NUnit3TestAdapter" Version="4.4.2">
