--- a/src/Plc.Monitor/Plc.Monitor.csproj
+++ b/src/Plc.Monitor/Plc.Monitor.csproj
@@ -9,7 +9,7 @@
 		<AssemblyName>Phoenix.Data.Plc.Monitor</AssemblyName>
 		<RootNamespace>Phoenix.Data.Plc.Monitor</RootNamespace>
 		<Copyright>2023</Copyright>
-		<Version>5.0.0-beta.1</Version>
+		<Version>5.0.0</Version>
 		<Authors>Felix Leistner</Authors>
 		<Company>Little Phoenix</Company>
 		<Description>Interface assembly for monitoring plc items.</Description>
