--- a/src/Plc.Monitor.Polling.Test/Plc.Monitor.Polling.Test.csproj
+++ b/src/Plc.Monitor.Polling.Test/Plc.Monitor.Polling.Test.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net6.0;net48</TargetFrameworks>
+		<TargetFramework>net6.0</TargetFramework>
 		<LangVersion>latest</LangVersion>
 		<Nullable>disable</Nullable>
 		<ImplicitUsings>disable</ImplicitUsings>
